<<<<<<< HEAD
<resources>

    <string name="app_name">FirstTaskSolution</string>

    <string name="cityNameText">İstanbul</string>
    <string name="todayText">Bugün</string>
    <string name="temperatureText">26</string>
    <string name="degreeMarkText">°</string>
    <string name="weatherNameText">Güneşli</string>
    <string name="windText">Rüzgarlı</string>
    <string name="windSpeedText">3 km/s</string>
    <string name="nextDayGroupFirstDateText">Sal, 02 Nisan</string>
    <string name="nextDayGroupSecondDateText">Çar, 03 Nisan</string>
    <string name="nextDayGroupThirdDateText">Per, 04 Nisan</string>
    <string name="nextDayGroupFourthDateText">Cum, 05 Nisan</string>
    <string name="nextDayGroupTemperatureRangesText">14° - 27°</string>


=======
<resources>
    <string name="app_name">FirstTaskSolution</string>
>>>>>>> 43ec3845c288fa7f2fcbcac537d0f051990d3c8f
</resources>