<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/textColorSecondary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityText"
        android:layout_marginTop="@dimen/largeMarginSize"
        android:text="@string/cityNameText"
        style="@style/largeMediumTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todayText"
        android:text="@string/todayText"
        style="@style/smallRegularTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityText" />

    <ImageView
        android:id="@+id/weatherImage"
        style="@style/largeImageView"
        android:layout_marginTop="@dimen/extraLargeMarginSize"
        android:src="@drawable/ic_sunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayText" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_marginTop="@dimen/largeMarginSize"
        android:text="@string/temperatureText"
        style="@style/hugeBoldTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherImage" />

    <TextView
        android:id="@+id/degreeMarkText"
        style="@style/hugeBoldTextView"
        android:text="@string/degreeMarkText"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureText"
        app:layout_constraintStart_toEndOf="@+id/temperatureText"
        app:layout_constraintTop_toTopOf="@+id/temperatureText" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_marginTop="@dimen/normalMarginSize"
        style="@style/normalMediumTextView"
        android:text="@string/weatherNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureText" />

    <TextView
        android:id="@+id/windText"
        android:layout_marginTop="@dimen/largeMarginSize"
        android:text="@string/windText"
        style="@style/smallMediumTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallMarginSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windText">

        <ImageView
            android:id="@+id/windImage"
            style="@style/smallImageView"
            android:src="@drawable/ic_wind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/windSpeedText"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/extraSmallMarginSize"
            android:layout_toEndOf="@+id/windImage"
            android:text="@string/windSpeedText"
            style="@style/smallRegularTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/windImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nextDayGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/wideMarginSize"
        android:layout_marginTop="@dimen/hugeMarginSize"
        android:layout_marginEnd="@dimen/wideMarginSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherConstraint">


        <TextView
            android:id="@+id/nextFirstDayDateText"
            style="@style/smallRegularTextView"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupFirstDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/nextFirstDayWeatherImage"
            style="@style/mediumImageView"
            android:src="@drawable/ic_sunny"
            app:layout_constraintEnd_toStartOf="@+id/nextFirstDayCelciusText"
            app:layout_constraintStart_toEndOf="@+id/nextFirstDayDateText"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/nextFirstDayCelciusText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupTemperatureRangesText"
            style="@style/smallMediumTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nextSecondDayDateText"
            style="@style/smallRegularTextView"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:layout_marginBottom="17dp"
            android:text="@string/nextDayGroupSecondDateText"
            app:layout_constraintBottom_toTopOf="@+id/nextThirdDayDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextFirstDayDateText" />

        <ImageView
            android:id="@+id/nextSecondDayWeatherImage"
            style="@style/mediumImageView"
            android:src="@drawable/ic_cloudy"
            app:layout_constraintEnd_toEndOf="@+id/nextFirstDayWeatherImage"
            app:layout_constraintStart_toStartOf="@+id/nextFirstDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@+id/nextFirstDayWeatherImage" />


        <TextView
            android:id="@+id/nextSecondDayCelciusText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupTemperatureRangesText"
            style="@style/smallMediumTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextFirstDayCelciusText" />

        <TextView
            android:id="@+id/nextThirdDayDateText"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupThirdDateText"
            style="@style/smallRegularTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextSecondDayDateText" />


        <ImageView
            android:id="@+id/nextThirdDayWeatherImage"
            style="@style/mediumImageView"
            android:src="@drawable/ic_sunny"
            app:layout_constraintEnd_toEndOf="@+id/nextSecondDayWeatherImage"
            app:layout_constraintStart_toStartOf="@+id/nextSecondDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@+id/nextSecondDayWeatherImage" />

        <TextView
            android:id="@+id/nextThirdDayCelciusText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupTemperatureRangesText"
            style="@style/smallMediumTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextSecondDayCelciusText" />


        <TextView
            android:id="@+id/nextFourthDayDateText"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:layout_marginBottom="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupFourthDateText"
            style="@style/smallRegularTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextThirdDayDateText" />


        <ImageView
            android:id="@+id/nextFourthDayWeatherImage"
            style="@style/mediumImageView"
            android:layout_marginBottom="@dimen/mediumMarginSize"
            android:src="@drawable/ic_rainy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nextThirdDayWeatherImage"
            app:layout_constraintStart_toStartOf="@+id/nextThirdDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@+id/nextThirdDayWeatherImage" />

        <TextView
            android:id="@+id/nextFourthDayCelciusText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/normalMarginSize"
            android:layout_marginBottom="@dimen/normalMarginSize"
            android:text="@string/nextDayGroupTemperatureRangesText"
            style="@style/smallMediumTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextThirdDayCelciusText" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>