<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/textColorSecondary"
    tools:context="WeatherActivity">

    <TextView
        android:id="@+id/cityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/largeMediumText"
        android:layout_marginStart="@dimen/mediumHorizontalSpacing"
        android:layout_marginEnd="@dimen/mediumHorizontalSpacing"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:text="@string/cityNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallRegularText"
        android:text="@string/todayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityText" />

    <ImageView
        android:id="@+id/weatherImage"
        style="@style/largeImageView"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:src="@drawable/ic_sunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayText" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hugeBoldText"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:text="@string/temperatureText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherImage" />

    <TextView
        android:id="@+id/degreeMarkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/hugeBoldText"
        android:text="@string/degreeMarkText"
        app:layout_constraintBottom_toBottomOf="@id/temperatureText"
        app:layout_constraintStart_toEndOf="@id/temperatureText"
        app:layout_constraintTop_toTopOf="@id/temperatureText" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normalMediumText"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        android:text="@string/weatherNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureText" />

    <TextView
        android:id="@+id/windText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/smallMediumText"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:text="@string/windText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weatherText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tinyVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/windText">

        <ImageView
            android:id="@+id/windImage"
            style="@style/smallImageView"
            android:src="@drawable/ic_wind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/windSpeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallRegularText"
            android:layout_marginStart="@dimen/smallHorizontalSpacing"
            android:text="@string/windSpeedText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/windImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nextDayGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hugeHorizontalSpacing"
        android:layout_marginEnd="@dimen/hugeHorizontalSpacing"
        android:layout_marginBottom="@dimen/largeVerticalSpacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nextFirstDayDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallRegularText"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFirstDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nextFirstDayWeatherImage"
            style="@style/mediumImageView"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_sunny"
            app:layout_constraintEnd_toStartOf="@id/nextFirstDayCelciusText"
            app:layout_constraintStart_toEndOf="@id/nextFirstDayDateText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nextFirstDayCelciusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallMediumText"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nextSecondDayDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallRegularText"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupSecondDateText"
            app:layout_constraintBottom_toTopOf="@id/nextThirdDayDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextFirstDayDateText" />

        <ImageView
            android:id="@+id/nextSecondDayWeatherImage"
            style="@style/mediumImageView"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_cloudy"
            app:layout_constraintEnd_toEndOf="@id/nextFirstDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/nextFirstDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/nextFirstDayWeatherImage" />

        <TextView
            android:id="@+id/nextSecondDayCelciusText"
            style="@style/smallMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextFirstDayCelciusText" />

        <TextView
            android:id="@+id/nextThirdDayDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallRegularText"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupThirdDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextSecondDayDateText" />

        <ImageView
            android:id="@+id/nextThirdDayWeatherImage"
            style="@style/mediumImageView"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_sunny"
            app:layout_constraintEnd_toEndOf="@id/nextSecondDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/nextSecondDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/nextSecondDayWeatherImage" />

        <TextView
            android:id="@+id/nextThirdDayCelciusText"
            style="@style/smallMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextSecondDayCelciusText" />

        <TextView
            android:id="@+id/nextFourthDayDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallRegularText"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFourthDateText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextThirdDayDateText" />

        <ImageView
            android:id="@+id/nextFourthDayWeatherImage"
            style="@style/mediumImageView"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:layout_marginBottom="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_rainy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nextThirdDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/nextThirdDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/nextThirdDayWeatherImage" />

        <TextView
            android:id="@+id/nextFourthDayCelciusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallMediumText"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nextThirdDayCelciusText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>